Auto-keying doesn't recognize custom properties pasted across the pose buffer mirrored #34688

Closed
opened 2013-03-19 01:33:12 +01:00 by Bun ny · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64, NVIDIA GeForce GTX 580

- Blender version with error, and version that worked ---

Blender 2.66a

- Short description of error ---

Copying the pose of a bone with a custom property to the pose buffer and pasting the pose mirrored works, but isn't properly keyed by auto-key.

A confusing summary and description, but the example below should better illustrate.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Activate auto-keying, select the foot.ik.L bone, move to frame 2, animate the 'Roll' property and auto-key will key it automatically. Then, with only foot.ik.L selected, copy the pose to buffer and paste mirrored. It correctly mirrors the Roll property to foot.ik.R, but doesn't enter a key on the custom property (visible in the DopeSheet), so if you move to frame 3 it snaps back to the rest pose.%%%

%%%--- Operating System, Graphics card --- Windows 7 x64, NVIDIA GeForce GTX 580 - Blender version with error, and version that worked --- Blender 2.66a - Short description of error --- Copying the pose of a bone with a custom property to the pose buffer and pasting the pose mirrored works, but isn't properly keyed by auto-key. A confusing summary and description, but the example below should better illustrate. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Activate auto-keying, select the foot.ik.L bone, move to frame 2, animate the 'Roll' property and auto-key will key it automatically. Then, with only foot.ik.L selected, copy the pose to buffer and paste mirrored. It correctly mirrors the Roll property to foot.ik.R, but doesn't enter a key on the custom property (visible in the DopeSheet), so if you move to frame 3 it snaps back to the rest pose.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed in svn.

Changed KeyingSet used from LocRotScale -> Whole Character%%%

%%%Fixed in svn. Changed KeyingSet used from LocRotScale -> Whole Character%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34688
No description provided.