Bugfix [#34688] Auto-Keying doesn't include custom properties when pasting poses

Previously, Paste Poses only used the LocRotScale Keying Set for autokeyframing
purposes. This was fine for most purposes, but with many rigs these days also
using custom properties for important posing functions, it's important that we
include those here too.